# genbio-pathfm

./: README.md  pyproject.toml
genbio-pathfm/: inference.py  model.py
